# prediction-whale

./: COLAB_GUIDE.md  PLAN.md  README.md  REPORT.md  UPDATE_PLAN.md  app.py  pyproject.toml
data/processed/: candidate_matches.json  cluster_summary.txt  divergence_analysis.json  matched_markets.json  mode3_causality_results.json  mode3_causality_summary.txt  network_stats.txt  price_comparison.csv  wisdom_score_summary.json
data/raw/: kalshi_all_events.json  kalshi_markets_sample.json  kalshi_trades_sample.json  poly_all_events.json  poly_holders_sample.json  poly_leaderboard_top50.json  poly_markets_top20.json  poly_trades_sample.json
figures/: ANALYSIS_REPORT.txt
notebooks/: 02_market_matching.ipynb  03_full_data_collection.ipynb  04_feature_engineering_dbscan.ipynb  05_network_wisdom_score.ipynb  06_cross_platform_comparison.ipynb  07_visualization_polish.ipynb  README.md
scripts/: 01_api_poc.py  02_market_matching.py  03_full_data_collection.py  04_feature_engineering_dbscan.py  04_feature_engineering_dbscan_robust.py  05_network_wisdom_score.py  05b_mode3_causality.py  06_cross_platform_comparison.py  07_visualization_polish.py  08_compute_market_stats.py  09_compute_prices.py
