[project]
name = "prediction-whale"
version = "0.1.0"
description = "Prediction market integrity auditor: Polymarket vs Kalshi wisdom-of-crowds analysis"
authors = [
    {name = "enpuyou",email = "youenpu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch (==2.2.2)",
    "sentence-transformers (==2.7.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.2,<4.0.0)",
    "numpy (>=1.26,<2.0)",
    "networkx (>=3.6.1,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "streamlit (>=1.54.0,<2.0.0)",
    "plotly (>=6.5.2,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
